kube/kubectl/kuard-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: kuard
spec:
  containers:
    - image: docker.io/arockiaanto/kuard:latest
      name: kuard
      livenessProbe:
        httpGet:
          path: /healthy
          port: 8080
        initialDelaySeconds: 5
        timeoutSeconds: 1
        periodSeconds: 10
        failureThreshold: 3
      ports: 
        - containerPort: 8080
          name: http
          protocol: TCP
